--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
+    "lenis": "^1.3.15",
     "lucide-react": "^0.554.0",
     "mongodb": "^7.0.0",
     "next": "16.0.3",
