--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@lottiefiles/dotlottie-react": "^0.17.8",
+    "@supabase/supabase-js": "^2.84.0",
     "better-auth": "^1.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.44.7",
     "framer-motion": "^12.23.24",
     "lenis": "^1.3.15",
     "lucide-react": "^0.554.0",
     "mongodb": "^7.0.0",
     "next": "16.0.3",
+    "postgres": "^3.4.7",
     "radix-ui": "^1.4.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
