--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "lenis": "^1.3.15",
     "lucide-react": "^0.554.0",
     "mongodb": "^7.0.0",
-    "next": "16.0.3",
+    "next": "^16.0.7",
     "postgres": "^3.4.7",
     "radix-ui": "^1.4.3",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.66.1",
     "react-icons": "^5.5.0",
     "sonner": "^2.0.7",
@@ -37,7 +37,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "16.0.3",
+    "eslint-config-next": "^16.0.7",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
